--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@walletconnect/react-native-compat": "^2.13.1",
+    "@web3modal/ethers-react-native": "^1.4.1",
+    "ethers": "^6.13.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
